chore: compile with Go 1.22 (#872)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.21'
+          go-version: '1.22'
           cache-dependency-path: |
             go.sum
             caddy/go.sum
@@ -37,10 +37,13 @@ jobs:
   test:
     strategy:
       matrix:
-        go: [ '1.20', '1.21' ]
+        go: [ '1.20', '1.21', '1.22' ]
       fail-fast: false
     name: Test
     runs-on: ubuntu-latest
+    env:
+      # Temporary workaround for https://github.com/golang/go/issues/65653
+      GOEXPERIMENT: nocoverageredesign
     steps:
       - name: Checkout
         uses: actions/checkout@v4
