--- a/charts/mercure/values.yaml
+++ b/charts/mercure/values.yaml
@@ -28,15 +28,21 @@ subscriberJwtAlg: HS256
 # -- The license key for [the High Availability version](https://mercure.rocks/docs/hub/cluster) (not necessary is you use the FOSS version).
 license: ""
 
-# -- Enable the metrics. You must also add the [metrics](https://caddyserver.com/docs/caddyfile/directives/metrics) in the `globalOptions` for Caddy server.
-# servers {
-#     metrics
-# }
-# admin :9181
 metrics:
+  # -- Enable the metrics. You must also add the [metrics](https://caddyserver.com/docs/caddyfile/directives/metrics) in the `globalOptions` for Caddy server.
+  # servers {
+  #     metrics
+  # }
+  # admin :9181
   enabled: false
-  # -- The port to use for the metrics server.
+  # -- The port to use for exposing the metrics.
   port: 9181
+
+  serviceMonitor:
+    # -- Whether to create a ServiceMonitor for Prometheus Operator.
+    enabled: false
+    # -- The interval to use for the ServiceMonitor to scrape the metrics.
+    interval: 15s
 
 # -- The number of replicas (pods) to launch, must be 1 unless you are using [the High Availability version](https://mercure.rocks/docs/hub/cluster).
 replicaCount: 1
