--- a/charts/mercure/templates/service.yaml
+++ b/charts/mercure/templates/service.yaml
@@ -26,7 +26,7 @@ metadata:
   name: {{ include "mercure.fullname" . }}-metrics
   labels:
     {{- include "mercure.labels" . | nindent 4 }}
-    caca: proute
+    prometheus-operated: true
   {{- with .Values.service.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
