feat(helm): allow passing existing secret in helm chart values (#809)

--- a/charts/mercure/templates/secrets.yaml
+++ b/charts/mercure/templates/secrets.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.existingSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -13,3 +14,4 @@ data:
   license: {{ .Values.license | b64enc | quote }}
   caddy-extra-config: {{ .Values.caddyExtraConfig | b64enc | quote }}
   caddy-extra-directives: {{ .Values.caddyExtraDirectives | b64enc | quote }}
+{{- end}}
