--- a/charts/mercure/templates/secrets.yaml
+++ b/charts/mercure/templates/secrets.yaml
@@ -7,7 +7,9 @@ metadata:
     {{- include "mercure.labels" . | nindent 4 }}
 type: Opaque
 data:
+  {{- if .Values.transportUrl }}
   transport-url: {{ .Values.transportUrl | b64enc | quote }}
+  {{- end }}
   publisher-jwt-key: {{ .Values.publisherJwtKey | default (randAlphaNum 40) | b64enc | quote }}
   subscriber-jwt-key: {{ .Values.subscriberJwtKey | default (randAlphaNum 40) | b64enc | quote }}
   extra-directives: {{ .Values.extraDirectives | b64enc | quote }}
