--- a/charts/mercure/templates/serviceMonitor.yaml
+++ b/charts/mercure/templates/serviceMonitor.yaml
@@ -4,12 +4,25 @@ kind: ServiceMonitor
 metadata:
   name: {{ include "mercure.fullname" . }}-metrics
   labels:
-    app.kubernetes.io/name: {{ include "mercure.name" . }}
+    {{- include "mercure.labels" . | nindent 4 }}
+    app.kubernetes.io/component: metrics
 spec:
   selector:
     matchLabels:
-      prometheus-operated: "true"
+      app.kubernetes.io/component: metrics
   endpoints:
     - port: metrics
-      interval: {{ .Values.metrics.interval }}
+      {{- if .Values.metrics.serviceMonitor.interval }}
+      interval: {{ .Values.metrics.serviceMonitor.interval }}
+      {{- end }}
+      {{- if .Values.metrics.serviceMonitor.scrapeTimeout }}
+      scrapeTimeout: {{ .Values.metrics.serviceMonitor.scrapeTimeout }}
+      {{- end }}
+      honorLabels: {{ .Values.metrics.serviceMonitor.honorLabels }}
+      {{- if .Values.metrics.serviceMonitor.relabelings }}
+      metricRelabelings: {{- toYaml .Values.metrics.serviceMonitor.relabelings | nindent 8 }}
+      {{- end }}
+      {{- if .Values.metrics.serviceMonitor.relabelings }}
+      relabelings: {{- toYaml .Values.metrics.serviceMonitor.relabelings | nindent 6 }}
+      {{- end }}
 {{- end }}
