feat(helm): add support for metrics in the chart (#924)
* Add support for metrics in chart

Signed-off-by: François BIBRON <francois.bibron@ext.soprasteria.com>

* feat: add serviceMonitor

Signed-off-by: François BIBRON <francois.bibron@ext.soprasteria.com>

* feat: fix values

Signed-off-by: François BIBRON <francois.bibron@ext.soprasteria.com>

* feat: fix values

Signed-off-by: François BIBRON <francois.bibron@ext.soprasteria.com>

* feat: fix values

Signed-off-by: François BIBRON <francois.bibron@ext.soprasteria.com>

* fix values and typos

Signed-off-by: François Bibron <francois.bibron@polyconseil.fr>

* fix typo

Signed-off-by: François Bibron <francois.bibron@polyconseil.fr>

* fix CS

---------

Signed-off-by: François BIBRON <francois.bibron@ext.soprasteria.com>
Signed-off-by: François Bibron <francois.bibron@polyconseil.fr>
Co-authored-by: Kévin Dunglas <kevin@dunglas.fr>

--- a/charts/mercure/templates/service.yaml
+++ b/charts/mercure/templates/service.yaml
@@ -18,3 +18,27 @@ spec:
       name: http
   selector:
     {{- include "mercure.selectorLabels" . | nindent 4 }}
+---
+{{- if .Values.metrics.enabled }}
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "mercure.fullname" . }}-metrics
+  labels:
+    {{- include "mercure.labels" . | nindent 4 }}
+    app.kubernetes.io/component: metrics
+  {{- with .Values.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+
+spec:
+  type: ClusterIP
+  ports:
+    - port: {{ .Values.metrics.port }}
+      targetPort: metrics
+      protocol: TCP
+      name: metrics
+  selector:
+    {{- include "mercure.selectorLabels" . | nindent 4 }}
+{{- end }}
