chore: bump deps and exclude unused Badger deps

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,10 +1,11 @@
+version: 2
 before:
   hooks:
     - go mod tidy
 checksum:
   name_template: "checksums.txt"
 snapshot:
-  name_template: "{{ incpatch .Version }}-next"
+  version_template: "{{ incpatch .Version }}-next"
 changelog:
   sort: asc
   filters:
@@ -22,6 +23,8 @@ env:
 builds:
   - id: caddy
     dir: caddy/mercure
+    flags:
+      -tags nobadger,nomysql,nopgx
     ldflags:
       - -X 'github.com/caddyserver/caddy/v2.CustomVersion=Mercure.rocks {{ .Version }} Caddy'
     goos:
