--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,6 +32,7 @@ jobs:
           VALIDATE_GITLEAKS: false
           VALIDATE_GO: false
           VALIDATE_GO_MODULES: false
+          VALIDATE_GO_RELEASER: false
           VALIDATE_PHP_PHPCS: false
           VALIDATE_KUBERNETES_KUBECONFORM: false
           VALIDATE_JAVASCRIPT_PRETTIER: false
