ci: better GoReleaser config for tags

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -23,10 +23,12 @@ env:
 builds:
   - id: caddy
     dir: caddy/mercure
-    flags:
-      -tags=nobadger,nomysql,nopgx
     ldflags:
       - -X 'github.com/caddyserver/caddy/v2.CustomVersion=Mercure.rocks {{ .Version }} Caddy'
+    tags:
+      - nobadger
+      - nomysql
+      - nopgx
     goos:
       - linux
       - darwin
