--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23'
+          go-version: "1.23"
           cache-dependency-path: |
             go.sum
             caddy/go.sum
@@ -68,7 +68,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         uses: actions/attest-build-provenance@v1
         with:
-          subject-path: '${{ github.workspace }}/dist/**/mercure'
+          subject-path: "${{ github.workspace }}/dist/**/mercure"
 
       - name: Display version
         run: dist/caddy_linux_amd64_v1/mercure version
