--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
       - v*.*.*
 
 env:
-  GO111MODULE: 'on'
+  GO111MODULE: "on"
 
 jobs:
   golangci:
@@ -23,7 +23,7 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.23'
+          go-version: "1.23"
           cache-dependency-path: |
             go.sum
             caddy/go.sum
@@ -37,7 +37,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go: [ '1.21', '1.22', '1.23' ]
+        go: ["1.21", "1.22", "1.23"]
       fail-fast: false
     name: Test
     runs-on: ubuntu-latest
@@ -82,8 +82,8 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: '16'
-          cache: 'npm'
+          node-version: "16"
+          cache: "npm"
           cache-dependency-path: conformance-tests/package-lock.json
 
       - name: Install Playwrigth dependencies
