--- a/cmd/mercure/mercure.yaml
+++ b/cmd/mercure/mercure.yaml
@@ -3,10 +3,22 @@ debug: true
 allow_anonymous: true
 #cert_file: fixtures/tls/server.crt
 #key_file: fixtures/tls/server.key
-cors_allowed_origins: [http://localhost:3000, http://localhost:3001, http://localhost:5000, http://localhost:8000]
+cors_allowed_origins:
+  [
+    http://localhost:3000,
+    http://localhost:3001,
+    http://localhost:5000,
+    http://localhost:8000,
+  ]
 transport_url: bolt://update.db
-jwt_key: '!ChangeThisMercureHubJWTSecretKey!'
-publish_allowed_origins: [http://localhost:3000, http://localhost:3001, http://localhost:5000, http://localhost:8000]
+jwt_key: "!ChangeThisMercureHubJWTSecretKey!"
+publish_allowed_origins:
+  [
+    http://localhost:3000,
+    http://localhost:3001,
+    http://localhost:5000,
+    http://localhost:8000,
+  ]
 subscriptions: true
 
 metrics_enabled: false
