--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -152,6 +152,22 @@ docker_manifests:
     image_templates:
       - dunglas/mercure:latest-amd64
       - dunglas/mercure:latest-arm64v8
+nfpms:
+  - id: linux_packages
+    package_name: mercure
+    file_name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ with .Arm }}v{{ . }}{{ end }}.{{ .Format }}"
+    builds:
+      - caddy
+    formats:
+      - apk
+      - deb
+      - rpm
+    maintainer: "Kévin Dunglas <kevin@dunglas.dev>"
+    description: "An open, easy, fast, reliable and battery-efficient solution for real-time communications."
+    license: "AGPL-3.0-or-later"
+    vendor: "Dunglas Services SAS"
+    homepage: "https://mercure.rocks"
+    bindir: /usr/bin 
 signs:
   - artifacts: checksum
     args:
