Fix: Add default shutdown grace period
As per #986, adds a default grace period of 1s. If the same global option has been set using the $GLOBAL_OPTIONS it wil override the default one.

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,5 +1,6 @@
 # Learn how to configure the Mercure.rocks Hub on https://mercure.rocks/docs/hub/config
 {
+	grace_period 1s
 	{$GLOBAL_OPTIONS}
 }
 
