--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
       - v*.*.*
 
 env:
-  GO111MODULE: "on"
+  GOTOOLCHAIN: local
 
 jobs:
   golangci:
@@ -23,7 +23,7 @@ jobs:
 
       - uses: actions/setup-go@v5
         with:
-          go-version: "1.23"
+          go-version: "1.24"
           cache-dependency-path: |
             go.sum
             caddy/go.sum
@@ -37,13 +37,10 @@ jobs:
   test:
     strategy:
       matrix:
-        go: ["1.21", "1.22", "1.23"]
+        go: ["1.23", "1.24"]
       fail-fast: false
     name: Test
     runs-on: ubuntu-latest
-    env:
-      # Temporary workaround for https://github.com/golang/go/issues/65653
-      GOEXPERIMENT: nocoverageredesign
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -57,8 +54,6 @@ jobs:
             caddy/go.sum
 
       - name: Use go-deadlock
-        # Blocked by https://github.com/sasha-s/go-deadlock/issues/34
-        if: matrix.go != '1.23'
         run: ./tests/use-go-deadlock.sh
 
       - name: Test
