--- a/charts/mercure/Chart.yaml
+++ b/charts/mercure/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: mercure
+name: mercure-chart
 description: A Helm chart to install a Mercure Hub in a Kubernetes cluster. Mercure is a protocol to push data updates to web browsers and other HTTP clients in a convenient, fast, reliable and battery-efficient way.
 home: https://mercure.rocks
 icon: https://mercure.rocks/static/logo.svg
@@ -12,8 +12,8 @@ keywords:
 - streaming-api
 - async-api
 type: application
-version: 0.18.2
-appVersion: "v0.18.2"
+version: 0.19.0
+appVersion: "v0.19.0"
 maintainers:
   - name: dunglas
     email: kevin@dunglas.fr
