refactor: upgrade the Gatling load test

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,9 @@ updates:
       interval: weekly
     commit-message:
       prefix: ci
+  - package-ecosystem: maven
+    directory: /gatling
+    schedule:
+      interval: weekly
+    commit-message:
+      prefix: ci
