--- a/examples/chat/chart/mercure-example-chat/templates/tests/test-connection.yaml
+++ b/examples/chat/chart/mercure-example-chat/templates/tests/test-connection.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "mercure-example-chat.labels" . | nindent 4 }}
   annotations:
-    "helm.sh/hook": test-success
+    "helm.sh/hook": test
 spec:
   containers:
     - name: wget
