--- a/examples/chat/chart/mercure-example-chat/templates/ingress.yaml
+++ b/examples/chat/chart/mercure-example-chat/templates/ingress.yaml
@@ -1,14 +1,8 @@
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := include "mercure-example-chat.fullname" . -}}
-{{- $svcPort := .Values.service.port -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
+  name: {{ include "mercure-example-chat.fullname" . }}
   labels:
     {{- include "mercure-example-chat.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
@@ -16,6 +10,9 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
+  {{- with .Values.ingress.className }}
+  ingressClassName: {{ . }}
+  {{- end }}
   {{- if .Values.ingress.tls }}
   tls:
     {{- range .Values.ingress.tls }}
@@ -32,10 +29,15 @@ spec:
       http:
         paths:
           {{- range .paths }}
-          - path: {{ . }}
+          - path: {{ .path }}
+            {{- with .pathType }}
+            pathType: {{ . }}
+            {{- end }}
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
+              service:
+                name: {{ include "mercure-example-chat.fullname" $ }}
+                port:
+                  number: {{ $.Values.service.port }}
           {{- end }}
     {{- end }}
-  {{- end }}
+{{- end }}
